# PurpleSector

./: .env.example  .gitignore  .npmrc.example  404.html  ARCHITECTURE.md  GETTING_STARTED.md  IMPLEMENTATION_NOTES.md  LICENSE  LICENSE-AGPL-3.0.txt  PIPELINE_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  UPGRADE_SUMMARY.md  docker-compose.dev.yml  docker-compose.kafka.yml  ecosystem.config.js  ecosystem.dev.config.js  index.html  next.config.mjs  nx.json  package-lock.json  package.json  sitemap.xml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: db.rs  main.rs  session_manager.rs
apps/web/: Dockerfile  eslint.config.mjs  manage.py  middleware.ts  next.config.js  project.json  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo
apps/web/apps/agent/: apps.py  memory.py  models.py  runtime.py  urls.py  views.py
apps/web/apps/agent/migrations/: 0001_initial.py  0002_initial.py
apps/web/apps/agent/tools/: __init__.py  analysis.py  events.py  lap_analysis.py  laps.py  run_plans.py  sessions.py  system.py  vehicles.py
apps/web/apps/analysis/: apps.py  models.py  urls.py  views.py
apps/web/apps/analysis/migrations/: 0001_initial.py  0002_initial.py
apps/web/apps/channels/: apps.py  models.py  urls.py  views.py
apps/web/apps/channels/migrations/: 0001_initial.py  0002_initial.py
apps/web/apps/core/: models.py  urls.py  views.py
apps/web/apps/core/management/commands/: seed_dev_users.py
apps/web/apps/core/migrations/: 0001_initial.py
apps/web/apps/events/: apps.py  models.py  session_urls.py  urls.py  views.py
apps/web/apps/events/migrations/: 0001_initial.py
apps/web/apps/mcp/: urls.py  views.py
apps/web/apps/plugins/: apps.py  registry.py  urls.py  views.py
apps/web/apps/telemetry/: apps.py  chat_views.py  models.py  urls.py  views.py
apps/web/apps/telemetry/migrations/: 0001_initial.py
apps/web/apps/tokens/: apps.py  models.py  urls.py  views.py
apps/web/apps/tokens/migrations/: 0001_initial.py
apps/web/apps/vehicles/: apps.py  models.py  urls.py  views.py
apps/web/apps/vehicles/migrations/: 0001_initial.py
apps/web/purplesector/: asgi.py  settings.py  urls.py  views.py  wsgi.py
apps/web/purplesector/middleware/: auth.py  csrf.py  inertia_share.py
apps/web/purplesector/services/: risingwave.py  trino.py
apps/web/purplesector/templates/: base.html  inertia.html
apps/web/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
apps/web/src/app/.well-known/oauth-protected-resource/: route.ts
apps/web/src/app/api/analysis-layouts/: route.ts
apps/web/src/app/api/chat/: route.ts
apps/web/src/app/api/events/: route.ts
apps/web/src/app/api/health/: route.ts
apps/web/src/app/api/laps/: route.ts
apps/web/src/app/api/mcp/: route.ts
apps/web/src/app/api/plot-layouts/: route.ts
apps/web/src/app/api/sessions/: route.ts
apps/web/src/app/api/tokens/: route.ts
apps/web/src/app/event/new/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/: AnalysisLoadLayoutDialog.tsx  AnalysisManageLayoutsDialog.tsx  AnalysisPanelGrid.tsx  AuthProvider.tsx  Breadcrumbs.tsx  ChannelEditorDialog.tsx  ChatInterface.tsx  ConfigurableTelemetryChart.tsx  ConfigurableTelemetryChart.tsx.backup  ExpressionEditor.tsx  Header.tsx  LapPageClient.tsx  LoadLayoutDialog.d.ts  LoadLayoutDialog.d.ts.map  LoadLayoutDialog.js  LoadLayoutDialog.tsx  ManageLayoutsDialog.d.ts  ManageLayoutsDialog.d.ts.map  ManageLayoutsDialog.js  ManageLayoutsDialog.tsx  MathChannelForm.tsx  PluginGlobalPanels.tsx  ReactQueryProvider.tsx  ResizablePanelGrid.tsx  SaveLayoutDialog.d.ts  SaveLayoutDialog.d.ts.map  SaveLayoutDialog.js  SaveLayoutDialog.tsx  TelemetryChart.tsx  TelemetryChart.tsx.backup  TelemetryDataPanel.tsx  ThemeToggle.tsx  UPlotChart.tsx  UserMenu.tsx  VehicleInfoPanel.tsx
apps/web/src/components/app-shell/: AgentSlidePanel.tsx  AppShell.tsx  AppShellContext.tsx  AppShellRoot.tsx  ContentPane.tsx  CreateEventDialog.tsx  CreateVehicleDialog.tsx  EventsTree.tsx  NavContext.tsx  NavPane.tsx  NavTabBar.tsx  StatusBar.tsx  TabContentRouter.tsx  TitleBar.tsx  ToolbarPane.tsx
apps/web/src/components/channel-editor/: ChannelEditorContent.tsx  MathChannelForm.tsx
apps/web/src/components/content/: ChannelEditorContent.tsx  EventDetailContent.tsx  EventEditContent.tsx  EventNewContent.tsx  LapDetailContent.tsx  RunPlanNewContent.tsx  SessionDetailContent.tsx  SessionEditContent.tsx  SessionNewContent.tsx
apps/web/src/components/settings/: AvatarCropDialog.tsx  SettingsDialog.tsx
apps/web/src/components/ui/: badge.d.ts  badge.d.ts.map  badge.js  card.js  card.tsx  dialog.js  label.d.ts  label.d.ts.map  label.js  tooltip.js
apps/web/src/lib/: access-control.ts  analysisLayout.ts  api-auth.ts  auth.ts  client-fetch.ts  mcp-auth.ts  plugin-server.ts  queryKeys.ts  risingwave.ts  server-prefetch.ts  session-api.ts  tauri-api.ts  trino.ts  utils.d.ts  utils.d.ts.map  utils.js
apps/web/src/plugins/: index.ts
apps/web/src/proto/: telemetry.d.ts
apps/web/src/stores/: lapUiStore.ts  liveLapIndexStore.ts  navUiStore.ts  sessionUiStore.ts  telemetryPanelUiStore.ts
apps/web/src/types/: core.ts  plotConfig.d.ts  plotConfig.d.ts.map  plotConfig.js  plotConfig.ts  telemetry.d.ts  telemetry.d.ts.map  telemetry.js  telemetry.ts
rust/: Cargo.toml
rust/crates/ps-demo-replay/: Cargo.toml
rust/crates/ps-demo-replay/src/: main.rs
rust/crates/ps-grpc-gateway/: Cargo.toml  Dockerfile  build.rs
rust/crates/ps-grpc-gateway/src/: auth.rs  gateway.rs  main.rs  proto.rs
rust/crates/ps-telemetry-core/: Cargo.toml  build.rs
rust/crates/ps-telemetry-core/src/: batch.rs  grpc.rs  lib.rs  proto.rs  wal.rs
rust/crates/ps-telemetry-core/src/capture/: ac.rs  acc.rs  demo.rs  mod.rs
rust/crates/ps-tray-app/: Cargo.toml
rust/crates/ps-tray-app/msix/: AppxManifest.xml
rust/crates/ps-tray-app/msix/Assets/: README.md
rust/crates/ps-tray-app/src/: config.rs  gui.rs  main.rs  pipeline.rs  platform.rs  stats.rs
rust/crates/ps-tray-app/wix/: main.wxs
(+389 files in other folders)
