[package]
name = "ps-telemetry-core"
description = "Shared telemetry capture library for PurpleSector sim data collection"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["capture"]
capture = []
cloud-transport = [
    "capture",
    "dep:tonic",
    "dep:rusqlite",
    "dep:zstd",
    "dep:tokio-stream",
]

[dependencies]
# Always available
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

# Async
async-trait = { workspace = true }
humantime-serde = { workspace = true }

# cloud-transport only
tonic = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = "0.13"
