[package]
name = "ps-tray-app"
description = "PurpleSector system tray app — captures sim telemetry and streams to cloud"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ps-tray-app"
path = "src/main.rs"

[dependencies]
ps-telemetry-core = { path = "../ps-telemetry-core", features = ["cloud-transport"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }

# GUI / System Tray
tray-icon = { workspace = true }
muda = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
image = { workspace = true }

# Protobuf (for computing serialized batch sizes)
prost = { workspace = true }

# Platform utilities
directories = { workspace = true }
